Client: normalize path in intercepted calls, implement realpath
Normalize path in intercepted library calls as POSIX requires.
For example, take the canonized path
/a1/b2/c3
from
///a1/a2/../b2/./c3/

Implement realpath, __realpath_chk and __open_2 library calls.
The __open_2 wrapper is required for x86_64-linux-gnu if fcntl.h
is inculuded but _FILE_OFFSET_BITS is not defined.

--- a/client/src/Makefile.am
+++ b/client/src/Makefile.am
@@ -18,6 +18,7 @@ libunifycr_la_SOURCES = \
   unifycr-defs.h \
   unifycr-internal.h \
   unifycr-wrap.h \
+  unifycr-path_utils.c \
   uthash.h \
   utlist.h
 
@@ -40,6 +41,7 @@ libunifycr_gotcha_la_SOURCES = \
   unifycr-defs.h \
   unifycr-internal.h \
   unifycr-wrap.h \
+  unifycr-path_utils.c \
   uthash.h \
   utlist.h
 
