--- a/configure.ac
+++ b/configure.ac
@@ -169,10 +169,13 @@ CP_WRAPPERS+=",-wrap,stat"
 CP_WRAPPERS+=",-wrap,__lxstat"
 CP_WRAPPERS+=",-wrap,__xstat"
 CP_WRAPPERS+=",-wrap,statfs"
+CP_WRAPPERS+=",-wrap,realpath"
+CP_WRAPPERS+=",-wrap,__realpath_chk"
 
 CP_WRAPPERS+=",-wrap,creat"
 CP_WRAPPERS+=",-wrap,creat64"
 CP_WRAPPERS+=",-wrap,open"
+CP_WRAPPERS+=",-wrap,__open_2"
 CP_WRAPPERS+=",-wrap,open64"
 CP_WRAPPERS+=",-wrap,read"
 CP_WRAPPERS+=",-wrap,write"
